# ITMO-labs

./: README.md
3nd year/Low level programming/Lab1/: CMakeLists.txt  Makefile  Makefile.win  README.md  main.c
3nd year/Low level programming/Lab1/src/: demo.c  run_tests.c
3nd year/Low level programming/Lab1/src/tests/: test.c  test.h
3nd year/Low level programming/Lab1/src/utils/: optional.c  optional.h
3nd year/Low level programming/Lab1/src/zgdb/: condition.c  condition.h  condition_public.h  document.c  document.h  document_public.h  element.c  element.h  element_public.h  format.c  format.h  format_public.h  iterator.c  iterator.h  iterator_public.h  list.c  list.h  query.c  query.h  query_public.h  schema.c  schema.h  schema_public.h
3nd year/Low level programming/Lab3/: CMakeLists.txt  README.md
3nd year/Low level programming/Lab3/client/: main  requests
3nd year/Low level programming/Lab3/client/include/: client.h  config.h  inet.h  parser.h  request.h  view.h
3nd year/Low level programming/Lab3/client/src/: client.c  inet.c  main.c  parser.c  view.c
3nd year/Low level programming/Lab3/server/: Makefile  main  simple.txt
3nd year/Low level programming/Lab3/server/data_generator/: data.txt  data_generator.py
3nd year/Low level programming/Lab3/server/include/data/: test_data.h
3nd year/Low level programming/Lab3/server/include/filetools/: basic_file_manager.h  big_data_tools.h
3nd year/Low level programming/Lab3/server/include/generator/: empty_generator.h
3nd year/Low level programming/Lab3/server/include/interface/: basic_crud.h  configuration.h  crud_interface.h  inet.h  server.h  signatures.h  usecase.h
3nd year/Low level programming/Lab3/server/include/perf/: wrapper.h
3nd year/Low level programming/Lab3/server/src/: main.c
3nd year/Low level programming/Lab3/server/src/data/: test_data.c
3nd year/Low level programming/Lab3/server/src/filetools/: basic_file_manager.c  big_data_tools.c
3nd year/Low level programming/Lab3/server/src/generator/: empty_generator.c
3nd year/Low level programming/Lab3/server/src/interface/: basic_crud.c  crud_interface.c  (+3 more)
(+302 files in other folders)
